compiler/src/test/resources/amyc/nameAnalyzer/passing/Classes.amy
object Classes
  abstract class Foo
  case class Bar() : Foo
  case class Baz(i: Int, f: Foo) : Foo

  fn foo(f: Foo): Foo = {
    f match {
      case Bar() => Bar()
      case Baz(_, Bar()) => Baz(0, Baz(0, Bar()))
      case Baz(1, Baz(j, ff)) => Baz(j, Baz(1, Bar()))
    }
  }
end Classes
