compiler/src/test/resources/amyc/nameAnalyzer/failing/ArgumentNumberPattern.amy
object Locals
  abstract class IP
  case class IntPair(i: Int, j: Int) : IP
  fn foo(): Int = {
    IntPair(1,2) match {
      case IntPair(i) => 42
    }
  }
end Locals
